Switching material output nodes is unpredictable #37978

Closed
opened 2013-12-28 23:28:14 +01:00 by gandalf3 · 6 comments
Member

System Information
Archlinux

Blender Version
Broken: Blender 2.69 Release and Blender 2.69 (sub 7)

      build date: 2013-12-20
      build time: 02:00:53
      build commit date: 2013-12-20
      build commit time: 00:40
      build hash: b2fdc59

Short description of error
Material output nodes switch when connecting different nodes to the material output node (the material output node that had not been connected for the longest time is active)

IMHO a more intuitive way to switch between output nodes is to use the last selected one.

Exact steps for others to reproduce the error

  1. Open Material_Output_switching.blend
  2. Disconnect and reconnect material output nodes (grab the connection and then put it back)
**System Information** Archlinux **Blender Version** Broken: Blender 2.69 Release and Blender 2.69 (sub 7) ``` build date: 2013-12-20 build time: 02:00:53 build commit date: 2013-12-20 build commit time: 00:40 build hash: b2fdc59 ``` **Short description of error** Material output nodes switch when connecting different nodes to the material output node (the material output node that had not been connected for the longest time is active) IMHO a more intuitive way to switch between output nodes is to use the last selected one. **Exact steps for others to reproduce the error** 1. Open [Material_Output_switching.blend](https://archive.blender.org/developer/F57906/Material_Output_switching.blend) 2. Disconnect and reconnect material output nodes (grab the connection and then put it back)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Brecht Van Lommel was assigned by Campbell Barton 2013-12-30 01:44:06 +01:00

This issue was referenced by blender/blender-addons-contrib@fc3be511f0

This issue was referenced by blender/blender-addons-contrib@fc3be511f07a8107da5f9b0c8778d16295ced7cb

This issue was referenced by fc3be511f0

This issue was referenced by fc3be511f07a8107da5f9b0c8778d16295ced7cb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fc3be511f0.

Closed by commit fc3be511f0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37978
No description provided.