Fix T37978: cycles nodes with multiple Material Output nodes not predictable.

Now it uses the last activated node like compositing does. This should have no
effect on existing files until you activate another output node there.